[TASK-27] refactor mappers and tests